[gd_scene load_steps=4 format=2]

[ext_resource path="res://PauseMenu.gd" type="Script" id=1]
[ext_resource path="res://fonts/TextGeneric.tres" type="DynamicFont" id=2]
[ext_resource path="res://Settings.tscn" type="PackedScene" id=3]

[node name="PauseMenu" type="Control"]
pause_mode = 2
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Node2D" type="Node2D" parent="."]
z_index = 1

[node name="ColorRect" type="ColorRect" parent="Node2D"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 1283.0
margin_bottom = 722.0
color = Color( 0.00392157, 0.713726, 0.564706, 0.486275 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Resume" type="Button" parent="Node2D"]
margin_left = 482.0
margin_top = 250.0
margin_right = 762.0
margin_bottom = 314.0
rect_min_size = Vector2( 280, 50 )
custom_fonts/font = ExtResource( 2 )
text = "Resume"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Save" type="Button" parent="Node2D"]
margin_left = 482.0
margin_top = 312.0
margin_right = 762.0
margin_bottom = 376.0
rect_min_size = Vector2( 280, 50 )
custom_fonts/font = ExtResource( 2 )
text = "Save"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Settings" type="Button" parent="Node2D"]
margin_left = 482.0
margin_top = 378.0
margin_right = 762.0
margin_bottom = 442.0
rect_min_size = Vector2( 280, 50 )
custom_fonts/font = ExtResource( 2 )
text = "Settings"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Quit" type="Button" parent="Node2D"]
margin_left = 466.0
margin_top = 450.0
margin_right = 780.0
margin_bottom = 514.0
rect_min_size = Vector2( 280, 50 )
custom_fonts/font = ExtResource( 2 )
text = "Main Menu"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Settings2" parent="Node2D" instance=ExtResource( 3 )]
visible = false

[connection signal="pressed" from="Node2D/Resume" to="." method="_on_Resume_pressed"]
[connection signal="pressed" from="Node2D/Save" to="." method="_on_Save_pressed"]
[connection signal="pressed" from="Node2D/Settings" to="." method="_on_Settings_pressed"]
[connection signal="pressed" from="Node2D/Quit" to="." method="_on_Quit_pressed"]
